--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --env=production"
+    "build": "webpack --config webpack.prod.js --env=production",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "@types/testing-library__jest-dom": "^5.0.3",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.2.1",
+    "jest": "^25.5.4",
+    "jest-dom": "^4.0.0",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
