--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "sourceMap": true,
       "noImplicitAny": true,
       "module": "commonjs",
-      "target": "es6",
+      "target": "ES6",
       "jsx": "react",
       "allowJs": true,
   },
